--- a/resources/less/_typography.less
+++ b/resources/less/_typography.less
@@ -181,18 +181,24 @@ hr {
 
 //prose
 .prose {
-    >*+*:not(.gallery--right):not(.gallery--left) {
+    //vertical spacing
+    >*+* {
         margin-top: var(--space-s);
     }
 
     >*+h2,
-    >figure:not(.gallery--right):not(.gallery--left)+* {
+    .quote {
         margin-top: var(--space-xxl);
     }
 
     >*+h3,
-    >*+h4 {
+    >*+h4,
+    .gallery {
         margin-top: var(--space-l);
+    }
+    .gallery--left,
+    .gallery--right {
+        margin-top: var(--space-s);
     }
     >h3+p,
     >h4+p {
@@ -244,4 +250,14 @@ hr {
         }
     }
 
+}
+
+@media only screen and (min-width: 750px) { //match .gallery bp
+    .prose {
+        .gallery--left,
+        .gallery--right {
+            margin-top: 0;
+            margin-bottom: var(--space-m); //space right/left images away from others
+        }
+    }
 }
